--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand me-auto" href="#">
+            <a class="navbar-brand me-auto" href="index.html">
                 <img src="img/rockymaster-logo.webp">
             </a>
-            <a href="" id="btn-locate" class="btn btn-primary me-3 d-none d-md-block d-lg-none"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
+            <a href="location.html" id="btn-locate" class="btn btn-primary me-3 d-none d-md-block d-lg-none"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +53,10 @@
                         <a class="nav-link" href="#">Partners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item d-md-none d-lg-block ps-lg-3">
-                        <a href="" id="btn-locate" class="btn btn-primary"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
+                        <a href="location.html" id="btn-locate" class="btn btn-primary"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
                     </li>
                 </div>
             </div>
@@ -174,7 +174,6 @@
 
             </div>
         </div>
-    
 
 <!-- footer -->
 
@@ -189,11 +188,11 @@
                 <div class="col-6 col-lg-3 mb-4">
                     <h5>Quick Link</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Promotion</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Loyalty Program</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact</a></li>
+                        <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 text-muted">Contact</a></li>
                     </ul>
                 </div>
 
