--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
 
 <body>
 
-    
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand me-auto" href="index.html">
                 <img src="img/rockymaster-logo.webp">
             </a>
-            <a href="location.html" id="btn-locate" class="btn btn-primary me-3 d-none d-md-block d-lg-none"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
+            <a href="location.html" id="btn-locate" class="btn btn-primary me-3 d-none d-md-block d-lg-none"><i
+                    class="fa-solid fa-location-dot"></i> Locate Us</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +57,8 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item d-md-none d-lg-block ps-lg-3">
-                        <a href="location.html" id="btn-locate" class="btn btn-primary"><i class="fa-solid fa-location-dot"></i> Locate Us</a>
+                        <a href="location.html" id="btn-locate" class="btn btn-primary"><i
+                                class="fa-solid fa-location-dot"></i> Locate Us</a>
                     </li>
                 </div>
             </div>
@@ -74,6 +76,18 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5"
+                    aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6"
+                    aria-label="Slide 7"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7"
+                    aria-label="Slide 8"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="8"
+                    aria-label="Slide 9"></button>
             </div>
             <div class="carousel-inner shadow rounded-3">
                 <div class="carousel-item active" data-bs-interval="10000">
@@ -84,6 +98,24 @@
                 </div>
                 <div class="carousel-item">
                     <img src="img/amk-opening-special.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/rytea.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/breakfast.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/setlunch.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/hightea.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/save-the-earth.webp" class="curve-img d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/take-away.webp" class="curve-img d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
@@ -133,49 +165,49 @@
 
     <!-- cards -->
 
-    
-        <div class="container mb-5">
-            <div class="row justify-content-center g-5 text-center text-md-start">
 
-                <div class="col-12 col-md-4">
-                    <div class="card h-100 rounded-3 shadow">
-                        <img src="img/partner.avif" class="card-img-top rounded-top" alt="...">
-                        <div class="card-body d-flex flex-column align-items-center align-items-md-start">
-                            <h4 class="card-title">Our Partners</h4>
-                            <p class="card-text">Enjoy extra discounts including 1-for-1 if you are a cardholder for any
-                                of our partners.</p>
-                            <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
-                        </div>
+    <div class="container mb-5">
+        <div class="row justify-content-center g-5 text-center text-md-start">
+
+            <div class="col-12 col-md-4">
+                <div class="card h-100 rounded-3 shadow">
+                    <img src="img/partner.avif" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body d-flex flex-column align-items-center align-items-md-start">
+                        <h4 class="card-title">Our Partners</h4>
+                        <p class="card-text">Enjoy extra discounts including 1-for-1 if you are a cardholder for any
+                            of our partners.</p>
+                        <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
                     </div>
                 </div>
-
-                <div class="col-12 col-md-4">
-                    <div class="card h-100 rounded-3 shadow">
-                        <img src="img/career.avif" class="card-img-top rounded-top" alt="...">
-                        <div class="card-body d-flex flex-column align-items-center align-items-md-start">
-                            <h4 class="card-title">Careers</h4>
-                            <p class="card-text">Information on job opportunities. Start exploring your career at Rocky
-                                Master today!</p>
-                            <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-4">
-                    <div class="card h-100 rounded-3 shadow">
-                        <img src="img/contact-us.avif" class="card-img-top rounded-top" alt="...">
-                        <div class="card-body d-flex flex-column align-items-center align-items-md-start">
-                            <h4 class="card-title">Contact Us</h4>
-                            <p class="card-text">For any enquries or feedbacks, feel free to drop us an email.</p>
-                            <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-        </div>
 
-<!-- footer -->
+            <div class="col-12 col-md-4">
+                <div class="card h-100 rounded-3 shadow">
+                    <img src="img/career.avif" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body d-flex flex-column align-items-center align-items-md-start">
+                        <h4 class="card-title">Careers</h4>
+                        <p class="card-text">Information on job opportunities. Start exploring your career at Rocky
+                            Master today!</p>
+                        <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="card h-100 rounded-3 shadow">
+                    <img src="img/contact-us.avif" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body d-flex flex-column align-items-center align-items-md-start">
+                        <h4 class="card-title">Contact Us</h4>
+                        <p class="card-text">For any enquries or feedbacks, feel free to drop us an email.</p>
+                        <a href="#" class="btn btn-warning mt-auto">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- footer -->
 
     <footer class="bg-light">
         <div class="container">
@@ -192,7 +224,8 @@
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Promotion</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Loyalty Program</a></li>
-                        <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 text-muted">Contact</a></li>
+                        <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 text-muted">Contact</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -230,8 +263,10 @@
             <div class="d-flex justify-content-between py-4 my-4 border-top">
                 <p><small>Copyright © 2022 The Coffee Connection Pte Ltd (operating the brand Rocky Master).</small></p>
                 <ul class="list-unstyled d-flex">
-                    <li><a href="https://www.facebook.com/RockyMasterSingapore/" target="blank"><i class="social-media bi bi-facebook px-2 text-dark"></i></a></li>
-                    <li><a href="https://www.instagram.com/rockymaster_sg/?hl=en" target="blank"><i class="social-media bi bi-instagram text-dark"></i></a></li>
+                    <li><a href="https://www.facebook.com/RockyMasterSingapore/" target="blank"><i
+                                class="social-media bi bi-facebook px-2 text-dark"></i></a></li>
+                    <li><a href="https://www.instagram.com/rockymaster_sg/?hl=en" target="blank"><i
+                                class="social-media bi bi-instagram text-dark"></i></a></li>
                 </ul>
             </div>
         </div>
