--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="pb-3 bd-highlight">Comprising of Asian, Fusion and Western dishes, our signatures include
                     gourmet coffee, our all-time favourite Laksa Supreme, Chicken & Mushroom Quesadilla, Teriyaki
                     Chicken Pasta, American Breakfast and many more!</div>
-                <button type="button" class="btn btn-warning">Find Out More</button>
+                <button type="button" class="btn btn-warning"><a class="text-decoration-none" href="https://www.rockymaster.com.sg/_files/ugd/ecc045_65f00fe2b9c7465b80edd51102f36ad8.pdf" target="_blank">Find Out More</a></button>
             </div>
         </div>
     </div>
